# Prebyte

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  ISSUE_BACKLOG.md  LANGUAGE_SPEC.md  README.md  REQUIREMENTS.md  makefile
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-12-recursive-descent-parser-design.md  2026-05-14-reqpack-package-design.md
packaging/reqpack/package/: metadata.json.in  reqpack.lua
packaging/reqpack/package/scripts/: install.lua  layout.lua  remove.lua
scripts/ci/: build_reqpack_index.py  package_binary.py  package_reqpack.py
src/main/cpp/: PrebyteEngine.cpp  main.cpp
src/main/cpp/app/: AppRunner.cpp
src/main/cpp/cli/: CommandParser.cpp
src/main/cpp/config/: ProfileMerger.cpp  RuleResolver.cpp  SettingsLoader.cpp  VariableDefinitionParser.cpp
src/main/cpp/datatypes/: Data.cpp
src/main/cpp/io/: InputBuffer.cpp  InputReader.cpp  OutputWriter.cpp
src/main/cpp/parser/: FileParser.cpp  JsonParser.cpp  TomlParser.cpp  YamlParser.cpp
src/main/cpp/runtime/: BuiltinRegistry.cpp  CompiledTemplateCache.cpp  CompiledTemplateCompiler.cpp  CompiledTemplateExecutor.cpp  CompiledTemplateSerializer.cpp  CompiledTemplateWriter.cpp  Engine.cpp  ExpressionEvaluator.cpp  FileMetadataCache.cpp  FilterRegistry.cpp  IncludeResolver.cpp  LuaChunkCache.cpp  LuaExpressionEngine.cpp  LuaHelperRegistry.cpp  LuaRuntime.cpp  LuaSandbox.cpp  LuaValueBridge.cpp  Renderer.cpp  Value.cpp  ValueResolver.cpp  VariableStore.cpp
src/main/cpp/support/: Diagnostic.cpp
src/main/cpp/template/ast/: Expression.cpp  TemplateNode.cpp
src/main/cpp/template/lexer/: TemplateLexer.cpp
src/main/cpp/template/parser/: TemplateParser.cpp
src/main/include/: Engine.h  PrebyteEngine.h
src/main/include/app/: AppRunner.h  Command.h
src/main/include/cli/: CommandParser.h
src/main/include/config/: ConfigTypes.h  ProfileMerger.h  RuleResolver.h  SettingsLoader.h  VariableDefinitionParser.h
src/main/include/datatypes/: Data.h
src/main/include/io/: InputBuffer.h  InputReader.h  OutputWriter.h
src/main/include/parser/: FileParser.h  JsonParser.h  TomlParser.h  YamlParser.h
src/main/include/runtime/: BuiltinRegistry.h  CompiledTemplateCache.h  CompiledTemplateCompiler.h  CompiledTemplateExecutor.h  CompiledTemplateProgram.h  CompiledTemplateSerializer.h  CompiledTemplateWriter.h  EngineRuntime.h  ExpressionEngine.h  ExpressionEvaluator.h  FileMetadataCache.h  FilterRegistry.h  IncludeResolver.h  LuaChunkCache.h  LuaExpressionEngine.h  LuaHelperRegistry.h  LuaRuntime.h  LuaSandbox.h  LuaValueBridge.h  RenderSession.h  Renderer.h  Value.h  ValueResolver.h  VariableStore.h
src/main/include/support/: Diagnostic.h  SourceSpan.h  TextUtil.h  Version.h
src/main/include/template/ast/: Expression.h  TemplateNode.h
src/main/include/template/lexer/: TemplateLexer.h  TemplateToken.h
src/main/include/template/parser/: TemplateParser.h  TemplateParserOptions.h
tests/: BenchmarkMain.cpp  TestHarness.cpp  TestHarness.h  TestMain.cpp
tests/benchmarks/: history.md
tests/fixtures/file_rule_include/: main.txt  partial.md
tests/fixtures/lua_block/: input.txt
tests/fixtures/lua_condition/: input.txt
tests/fixtures/lua_inline/: input.txt
tests/fixtures/lua_repeated/: input.txt
tests/fixtures/settings_profile_merge/: settings.yaml
tests/fixtures/variable_import/: sample.env
tests/integration/: AppRunnerFeatureCoverageTests.cpp  AppRunnerIntegrationTests.cpp
tests/unit/: BuiltinRegistryTests.cpp  CommandParserTests.cpp  DataTests.cpp  EngineFunctionTests.cpp  EngineTests.cpp  ExpressionEvaluatorTests.cpp  FilterRegistryTests.cpp  FunctionRendererTests.cpp  IoTests.cpp  ParserTests.cpp  PrebyteEngineTests.cpp  RendererTests.cpp  RuleResolverTests.cpp  SettingsLoaderTests.cpp  TemplateLexerTests.cpp  TemplateParserTests.cpp  ValueTests.cpp  VariableDefinitionParserTests.cpp  VariableStoreTests.cpp
tools/benchmark_compare/: bench_go.go  bench_prebyte.cpp  run_compare.py
tools/benchmark_compare/cases/gotemplate/include_if/: header.txt  main.txt
tools/benchmark_compare/cases/jinja2/include_if/: header.txt  main.txt
tools/benchmark_compare/cases/mako/include_if/: header.txt  main.txt
tools/benchmark_compare/cases/prebyte/include_if/: main.txt
